# vmx-manager

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  TODO  autogen.sh  configure.ac
data/: Makefile.am  defaults.vmx  operating-systems.csv  vmman.glade  vmx-manager-config.xml  vmx-manager.desktop.in.in  vmx-manager.glade  vmx-manager.xml
dbus-sharp/: Makefile.am
hal-sharp/: Makefile.am
po/: ChangeLog  POTFILES.in  oc.po  sv.po
src/: CdConfigDialog.cs  CdDriveCombo.cs  ConfigDialog.cs  DeviceModel.cs  DeviceView.cs  DiskProgressDialog.cs  DiskProgressPane.cs  EntryPoint.cs  Enums.cs  EthernetConfigDialog.cs  GuestOperatingSystem.cs  HardDiskConfigDialog.cs  HigMessageDialog.cs  IconThemeUtils.cs  LinkLabel.cs  MainController.cs  MainWindow.cs  Makefile.am  MessagePane.cs  OSModel.cs  Utility.cs  VMModel.cs  VMView.cs  VirtualCdDrive.cs  VirtualDisk.cs  VirtualEthernet.cs  VirtualHardDisk.cs  VirtualMachine.cs  VirtualMachineManager.cs  vmman.in  vmx-manager.in
